# TaskManager

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Task.postman_collection.json  docker-compose.yaml  migrations.json  pyproject.toml
app/: main.py  schemas.py
backend/: __init__.py
backend/app/: database.py  main.py
backend/app/core/: config.py
backend/task/: models.py
backend/task/api/: controller.py
backend/user/: __init__.py  authentication.py  crud.py  models.py  schemas.py
backend/user/api/: controller.py
migrations/: 0001_migration_202202081932.py  0001_migration_202202101234.py  0002_migration_202202082146.py
scripts/: format-imports.sh  format.sh  lint.sh
task/: models.py  schemas.py  worker.py
task/api/: controller.py
tests/: test_create_task.py  test_login.py  test_refresh_token.py  test_signup.py  test_task_status.py  test_user.py
user/: authentication.py  crud.py  models.py  schemas.py
user/api/: controller.py
