[tool.poetry]
name = "TaskManager"
version = "0.1.0"
description = ""
authors = ["Cavidan Hasanli <cavidan.mahmudoglu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.67.0"
uvicorn = "^0.17.4"
pydantic = {extras = ["email"], version = "^1.9.0"}
peewee = "^3.14.8"
fastapi-jwt-auth = "^0.5.0"
passlib = "^1.7.4"
bcrypt = "^3.2.0"
peewee-migrations = "^0.3.30"
PyMySQL = "^1.0.2"
celery = "^5.2.3"
ipdata = "^3.4.3"
SQLAlchemy = "^1.4.31"
mysqlclient = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"
autoflake = "^1.4"
flake8 = "^3.8.4"
mypy = "^0.790"
isort = "^5.0"
pre-commit = "^2.8.2"
black = "^20.8b1"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
